--- a/web/build.gradle
+++ b/web/build.gradle
@@ -10,5 +10,8 @@ repositories {
 }
 
 dependencies {
+    compile project (':core')
+    compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.2.15'
+    compile 'com.github.jknack:handlebars-helpers:4.0.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
