--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ repositories {
 }
 
 dependencies {
-    compile project (':core')
+    compile (":core")
+    compile (":web")
+    compile (":demo")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
