--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,7 +1,17 @@
 group 'de.fuberlin.hcc'
 version '1.0-SNAPSHOT'
 
+buildscript {
+    ext { springBootVersion = '1.5.6.RELEASE' }
+    repositories { mavenCentral() }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath('se.transmode.gradle:gradle-docker:1.2')
+    }
+}
+
 apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
 
 sourceCompatibility = 1.8
 
@@ -10,5 +20,15 @@ repositories {
 }
 
 dependencies {
+    compile project (':core')
+    compile project (':web')
+    compile("org.springframework.boot:spring-boot-starter-web") {
+        exclude module: "spring-boot-starter-tomcat"
+    }
+
+    compile('com.h2database:h2')
+    compile("org.thymeleaf:thymeleaf-spring4")
+    compile("nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect")
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
 }
