--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
     }
-
+    compile('spring-boot-starter-data-jpa')
     compile('com.h2database:h2')
     compile("org.thymeleaf:thymeleaf-spring4")
     compile("nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect")
