--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,5 @@
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
-# User-specific stuff:
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/dictionaries
-
-# Sensitive or high-churn files:
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-
-# Gradle:
-.idea/**/gradle.xml
-.idea/**/libraries
-
-## File-based project format:
+# all intellij idea related files
+/.idea/**
 *.iws
 *.iml
 
@@ -41,4 +22,5 @@ gradle-app.setting
 gradle/wrapper/gradle-wrapper.properties
 
 .directory
- 
+# Database
+*.mv.db
