adding summary class, handlebars library and videos frontend

--- a/demo/src/main/resources/application-dev.properties
+++ b/demo/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:~/sb-questionnaires;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:./sb-questionnaires;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=username
 spring.datasource.password=password
 spring.datasource.driverClassName=org.h2.Driver
