* added some styling * added dev-tools * excluded database trace from git

--- a/demo/src/main/resources/application-dev.properties
+++ b/demo/src/main/resources/application-dev.properties
@@ -9,6 +9,12 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # At startup time, update the schema instead of deleting data:
 #spring.jpa.hibernate.ddl-auto=update
 
+# Handlebars: disable cache, to support hot-reloading
+handlebars.cache=false
+#handlebars.failOnMissingFile=true
+handlebars.prettyPrint=true
+handlebars.prefix=classpath:templates/
+handlebars.suffix=.hbs
 
 
 
