--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile('com.h2database:h2')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
+    runtime('org.springframework.boot:spring-boot-devtools')
 }
