preparing for release to maven

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,11 @@
 # IntelliJ
 **/out
 
+
 .gradle
 **/build
+gradle.properties
+**/gradle.properties
 
 # Ignore Gradle GUI config
 gradle-app.setting
