--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,29 +2,48 @@ buildscript {
     repositories { mavenCentral() }
 }
 
-plugins { id "io.spring.dependency-management" version "1.0.0.RELEASE" }
-
-ext {
-    springBootVersion = '1.5.6.RELEASE'
-}
 
 
-group 'de.fuberlin.hcc'
+group 'de.fuberlin.mi.hcc'
+archivesBaseName = "core"
 version '1.0-SNAPSHOT'
+
+
 
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'maven'
+apply plugin: 'signing'
 
 jar {
     baseName = 'questionnaires-core'
     version = '0.0.1-SNAPSHOT'
 }
 
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
+
+signing {
+    sign configurations.archives
+}
+
 
 dependencies {
     compile  group:'org.hibernate', name:'hibernate-core', version: '5.0.12.Final'
@@ -35,7 +54,4 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
-}
-dependencyManagement {
-    imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
 }
