--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -30,3 +30,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
 }
+dependencyManagement {
+    imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
+}
