--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile('com.h2database:h2')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
+    runtime('org.springframework.boot:spring-boot-devtools')
 }
 dependencyManagement {
     imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
