--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,9 +4,8 @@ buildscript {
 
 
 
-group 'de.fuberlin.mi.hcc'
-archivesBaseName = "core"
-version '1.0-SNAPSHOT'
+group 'de.fu-berlin.mi.hcc.questionnaires'
+version '1.0'
 
 
 
@@ -16,8 +15,8 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 
 jar {
-    baseName = 'questionnaires-core'
-    version = '0.0.1-SNAPSHOT'
+    baseName = 'questionnaires_core'
+    version = '0.0.1'
 }
 
 
@@ -42,6 +41,57 @@ repositories {
 
 signing {
     sign configurations.archives
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+                name 'Spring-Boot-Questionnaires Core'
+                packaging 'jar'
+                artifactId 'questionnaires_core'
+                // optionally artifactId can be defined here
+                description 'Spring-Boot-Questionnaires Core'
+                url 'https://github.com/FUB-HCC/Spring-Boot-Questionnaires'
+
+                scm {
+                    connection 'git@github.com:FUB-HCC/Spring-Boot-Questionnaires.git'
+                    developerConnection 'git@github.com:FUB-HCC/Spring-Boot-Questionnaires.git'
+                    url 'https://github.com/FUB-HCC/Spring-Boot-Questionnaires'
+                }
+
+                licenses {
+                    license {
+                        name 'GNU AFFERO GENERAL PUBLIC LICENSE Version 3'
+                        url 'https://www.gnu.org/licenses/agpl-3.0.en.html'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'msigal'
+                        name 'Maya Maria Seagal'
+                        email 'sigalmaria@gmail.com'
+                    }
+                    developer {
+                        id 'mackeprm'
+                        name 'Maximilian Mackeprang'
+                        email 'maximilian.mackeprang@fu-berlin.de '
+                    }
+                }
+            }
+        }
+    }
 }
 
 
