--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,9 +1,11 @@
-group 'de.fuberlin.hcc'
+group 'de.fu-berlin.mi.hcc.questionnaires'
 version '1.0-SNAPSHOT'
 
 buildscript {
     ext { springBootVersion = '1.5.6.RELEASE' }
-    repositories { mavenCentral() }
+    repositories { mavenCentral()
+        maven{ url  'https://oss.sonatype.org/content/groups/public/'}
+       }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath('se.transmode.gradle:gradle-docker:1.2')
@@ -17,14 +19,16 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven{ url  'https://oss.sonatype.org/content/groups/public'}
 }
 
 dependencies {
-    compile project (':core')
+    compile ('de.fu-berlin.mi.hcc.questionnaires:questionnaires_core')
     compile project (':web')
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
     }
+
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('com.h2database:h2')
     testCompile group: 'junit', name: 'junit', version: '4.12'
