--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,4 +1,4 @@
-group 'de.fuberlin.hcc'
+group 'de.fu-berlin.mi.hcc.questionnaires'
 version '1.0-SNAPSHOT'
 
 
@@ -12,10 +12,10 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven{ url  'https://oss.sonatype.org/content/groups/public'}
 }
-
 dependencies {
-    compile project (':core')
+    compile ('de.fu-berlin.mi.hcc.questionnaires:questionnaires_core')
     compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.2.15'
     compile 'com.github.jknack:handlebars-helpers:4.0.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
