--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -17,11 +17,11 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    maven{ url  'https://oss.sonatype.org/content/groups/public'}
+   // maven{ url  'https://oss.sonatype.org/content/groups/public'}
 }
 
 dependencies {
-    compile 'de.fu-berlin.mi.hcc.questionnaires:questionnaires_core:1.0-SNAPSHOT'
+    compile 'de.fu-berlin.mi.hcc.questionnaires:questionnaires_core:1.0'
     compile project (':web')
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
