--- a/web/build.gradle
+++ b/web/build.gradle
@@ -12,10 +12,10 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    maven{ url 'https://oss.sonatype.org/content/repositories/snapshots'}
+   // maven{ url 'https://oss.sonatype.org/content/repositories/snapshots'}
 }
 dependencies {
-    compile 'de.fu-berlin.mi.hcc.questionnaires:questionnaires_core:1.0-SNAPSHOT'
+    compile 'de.fu-berlin.mi.hcc.questionnaires:questionnaires_core:1.0'
     compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.2.15'
     compile 'com.github.jknack:handlebars-helpers:4.0.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
