gradle  build adding web dependency from maven

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -17,12 +17,11 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-   // maven{ url  'https://oss.sonatype.org/content/groups/public'}
+
 }
 
 dependencies {
-    compile 'de.fu-berlin.mi.hcc.questionnaires:questionnaires_core:1.0'
-    compile project (':web')
+    compile 'de.fu-berlin.mi.hcc.questionnaires:questionnaires_web:1.0'
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
     }
