--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,18 +1,93 @@
 group 'de.fu-berlin.mi.hcc.questionnaires'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 
 
 apply plugin: 'java'
-
+apply plugin: 'maven'
+apply plugin: 'signing'
 
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+
+jar {
+    baseName = 'questionnaires_web'
+    version = '0.0.1'
+}
+
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
 repositories {
     mavenCentral()
    // maven{ url 'https://oss.sonatype.org/content/repositories/snapshots'}
+}
+
+signing {
+    sign configurations.archives
+}
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+                name 'Spring-Boot-Questionnaires Web'
+                packaging 'jar'
+                artifactId 'questionnaires_web'
+                // optionally artifactId can be defined here
+                description 'Spring-Boot-Questionnaires Web'
+                url 'https://github.com/FUB-HCC/Spring-Boot-Questionnaires'
+
+                scm {
+                    connection 'git@github.com:FUB-HCC/Spring-Boot-Questionnaires.git'
+                    developerConnection 'git@github.com:FUB-HCC/Spring-Boot-Questionnaires.git'
+                    url 'https://github.com/FUB-HCC/Spring-Boot-Questionnaires'
+                }
+
+                licenses {
+                    license {
+                        name 'GNU AFFERO GENERAL PUBLIC LICENSE Version 3'
+                        url 'https://www.gnu.org/licenses/agpl-3.0.en.html'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'msigal'
+                        name 'Maya Maria Seagal'
+                        email 'sigalmaria@gmail.com'
+                    }
+                    developer {
+                        id 'mackeprm'
+                        name 'Maximilian Mackeprang'
+                        email 'maximilian.mackeprang@fu-berlin.de '
+                    }
+                }
+            }
+        }
+    }
 }
 dependencies {
     compile 'de.fu-berlin.mi.hcc.questionnaires:questionnaires_core:1.0'
