--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,24 +1,33 @@
-buildscript {
-    repositories { mavenCentral() }
-}
-
+apply plugin: 'java'
+apply plugin: 'signing'
+apply plugin: 'maven'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 
 group 'de.fu-berlin.mi.hcc.questionnaires'
-version '1.0'
+version '2.0.0'
 
-
-
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'maven'
-apply plugin: 'signing'
+bootJar {
+    enabled = false
+}
 
 jar {
     baseName = 'questionnaires_core'
-    version = '0.0.1'
+    version = '2.0.0'
+    enabled = true
 }
 
+dependencies {
+    compile('com.h2database:h2:1.4.197')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa:2.1.0.RELEASE')
+
+    compile('org.hibernate:hibernate-validator:5.3.5.Final')
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
+    //Testing
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
+}
 
 task javadocJar(type: Jar) {
     classifier = 'javadoc'
@@ -33,7 +42,6 @@ task sourcesJar(type: Jar) {
 artifacts {
     archives javadocJar, sourcesJar
 }
-sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -79,29 +87,17 @@ uploadArchives {
 
                 developers {
                     developer {
-                        id 'msigal'
-                        name 'Maya Maria Seagal'
-                        email 'sigalmaria@gmail.com'
-                    }
-                    developer {
                         id 'mackeprm'
                         name 'Maximilian Mackeprang'
                         email 'maximilian.mackeprang@fu-berlin.de '
+                    }
+                    developer {
+                        id 'msigal'
+                        name 'Maya Maria Seagal'
+                        email 'sigalmaria@gmail.com'
                     }
                 }
             }
         }
     }
-}
-
-
-dependencies {
-    compile  group:'org.hibernate', name:'hibernate-core', version: '5.0.12.Final'
-    compile('org.hibernate:hibernate-validator:5.3.5.Final')
-    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.0.12.Final'
-    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.11.9.RELEASE'
-    compile group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-
 }
