--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,37 +1,18 @@
-group 'de.fu-berlin.mi.hcc.questionnaires'
-version '1.0-SNAPSHOT'
-
-buildscript {
-    ext { springBootVersion = '1.5.6.RELEASE' }
-    repositories { mavenCentral() }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath('se.transmode.gradle:gradle-docker:1.2')
-    }
-}
-
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-
-}
+group 'de.fu-berlin.mi.hcc.questionnaires'
+version '2.0.0'
 
 dependencies {
-    compile 'de.fu-berlin.mi.hcc.questionnaires:questionnaires_web:1.0'
-    compile("org.springframework.boot:spring-boot-starter-web") {
-        exclude module: "spring-boot-starter-tomcat"
-    }
+    compile project(':web')
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-jetty")
 
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('com.h2database:h2')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     runtime('org.springframework.boot:spring-boot-devtools')
-}
-dependencyManagement {
-    imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
 }
