--- a/web/build.gradle
+++ b/web/build.gradle
@@ -6,6 +6,12 @@ apply plugin: 'io.spring.dependency-management'
 group 'de.fu-berlin.mi.hcc.questionnaires'
 version '2.0.0'
 
+jar {
+    baseName = 'questionnaires_web'
+    version = '2.0.0'
+    enabled = true
+}
+
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-jetty:2.1.0.RELEASE")
@@ -15,12 +21,6 @@ dependencies {
     compile 'com.github.jknack:handlebars-helpers:4.1.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-
-
-jar {
-    baseName = 'questionnaires_web'
-    version = '2.0.0'
 }
 
 
